Cleaned up Controller.