@@ -1,7 +1,6 @@
 package application;
 
 import entity.Utenti;
-import jakarta.persistence.*;
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
 import javafx.fxml.FXML;
@@ -10,20 +9,14 @@ import javafx.scene.chart.LineChart;
 import javafx.scene.chart.NumberAxis;
 import javafx.scene.control.*;
 import javafx.scene.control.cell.PropertyValueFactory;
-import org.hibernate.query.Query;
 
-import java.math.BigDecimal;
-import java.sql.Date;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
 
 public class Controller {
-    static final List<String> GENDERS = Collections.unmodifiableList(new ArrayList<>(){{add("M");add("F");}});
-    private final EntityManagerFactory entityManagerFactory = Persistence.createEntityManagerFactory("default");
-    private final EntityManager entityManager = entityManagerFactory.createEntityManager();
-    private final EntityTransaction transaction = entityManager.getTransaction();
+    static final List<String> GENDERS = List.of("M", "F");
     private final QueryManager qManager = new QueryManager();
 
     //Home fx elements.
@@ -73,42 +66,33 @@ public class Controller {
     }
     @FXML
     public void searchUser() {
-        try {
-            Query<Utenti> query = (Query<Utenti>) entityManager.createNativeQuery(
-                                "SELECT * FROM Utenti u WHERE u.username = :username",
-                                    Utenti.class);
-        } finally {
-            if(transaction.isActive()) {
-                transaction.rollback();
-            }
-        }
+
     }
 
     @FXML
     public void addUser() {
-       if (qManager.addUser(
-                        usernameField.getText(),
-                        nameField.getText(),
-                        surnameField.getText(),
-                        emailField.getText(),
+       if (qManager.addUser(usernameField.getText(), nameField.getText(), surnameField.getText(), emailField.getText(),
                         birthField.getValue(),
                         genderField.getValue(),
                         heightField.getText())
        ) {
            initUsersTable();
-       };
+       }
 
     }
     //Method to initialize the user's table.
     private void initUsersTable() {
-        usernameColumn.setCellValueFactory(new PropertyValueFactory<Utenti,String>("username"));
-        nameColumn.setCellValueFactory(new PropertyValueFactory<Utenti,String>("nome"));
-        surnameColumn.setCellValueFactory(new PropertyValueFactory<Utenti,String>("cognome"));
-        emailColumn.setCellValueFactory(new PropertyValueFactory<Utenti,String>("email"));
-        birthColumn.setCellValueFactory(new PropertyValueFactory<Utenti,String>("data_nascita"));
-        heightColumn.setCellValueFactory(new PropertyValueFactory<Utenti,String>("altezza"));
-        genderColumn.setCellValueFactory(new PropertyValueFactory<Utenti,String>("sesso"));
-        ObservableList<Utenti> users = FXCollections.observableArrayList(qManager.getAllUsers().get().getResultList());
-        usersTable.setItems(users);
+        usernameColumn.setCellValueFactory(new PropertyValueFactory<>("username"));
+        nameColumn.setCellValueFactory(new PropertyValueFactory<>("nome"));
+        surnameColumn.setCellValueFactory(new PropertyValueFactory<>("cognome"));
+        emailColumn.setCellValueFactory(new PropertyValueFactory<>("email"));
+        birthColumn.setCellValueFactory(new PropertyValueFactory<>("data_nascita"));
+        heightColumn.setCellValueFactory(new PropertyValueFactory<>("altezza"));
+        genderColumn.setCellValueFactory(new PropertyValueFactory<>("sesso"));
+        final var ris = qManager.getAllUsers();
+        if(ris.isPresent()) {
+            ObservableList<Utenti> users = FXCollections.observableArrayList(ris.get().getResultList());
+            usersTable.setItems(users);
+        }
     }
 }
